# Othello

Proj2/: BoardDirection.cpp  BoardDirection.h  BoardPosition.cpp  BoardPosition.h  CMakeLists.txt  OthelloBoard.cpp  OthelloBoard.h  OthelloMove.cpp  OthelloMove.h  OthelloView.cpp  OthelloView.h  main.cpp
Proj2/exportToHTML/: main.cpp.html
